--- a/Metodos/Metodos/Metodos.csproj
+++ b/Metodos/Metodos/Metodos.csproj
@@ -54,6 +54,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Newtho.cs" />
     <Compile Include="Ventana1.xaml.cs">
       <DependentUpon>Ventana1.xaml</DependentUpon>
     </Compile>
